--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="icon" href="/static/images/favicon.ico">
     <link rel="shortcut icon" href="/static/images/favicon.ico">
-    <title>Dimension by HTML5 UP</title>
+    <title>Персональное решение</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
     <link rel="stylesheet" href="/static/css/main.css"/>
@@ -88,7 +88,7 @@
                            placeholder="Имя" required>
                 </div>
                 <div><label class="form-text2" for="customer_email"></label>
-                    <input class="form-line" type="email" id="customer_email" name="customer_email"
+                    <input class="form-line" type="text" id="customer_email" name="customer_email"
                            placeholder="E-mail" required>
                 </div>
                 <div><label class="form-text2" for="customer_phone"></label>
