--- a/static/index.html
+++ b/static/index.html
@@ -98,7 +98,7 @@
                 <button class="button-form" id="customer_send" type="submit">Отправить</button>
 
             </form>
-            <button class="button_show" id="button_show"><span class="pr_color">Заказать</span> <span class="pr_color2">звонок</span>
+            <button class="button" id="button_show"><span class="pr_color">Заказать</span><span class="pr_color2">звонок</span>
             </button>
         </article>
 
@@ -146,7 +146,7 @@
                 <button class="button-form" id="send" type="submit">Отправить</button>
 
             </form>
-            <button class="button_show" id="button_show2"><span class="pr_color">Заказать</span> <span
+            <button class="button" id="button_show2"><span class="pr_color">Заказать</span> <span
                     class="pr_color2">звонок</span></button>
         </article>
 
