--- a/static/index.html
+++ b/static/index.html
@@ -10,6 +10,23 @@
     <noscript>
         <link rel="stylesheet" href="/static/css/noscript.css"/>
     </noscript>
+
+    <!-- Yandex.Metrika counter -->
+<script type="text/javascript" >
+   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+   m[i].l=1*new Date();
+   for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+   k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+   (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+   ym(97946750, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true
+   });
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/97946750" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
 </head>
 <body class="is-preload">
 
@@ -154,14 +171,14 @@
         <!-- Contact -->
         <article id="contact"><h2 class="major">Контакты</h2>
             <ul class="contact-info">
-                <li><i class="fa fa-phone"></i> <a href="tel:89582956925">+7 (958) 295-69-25</a></li>
-                <li><i class="fa fa-envelope"></i> <a href="mailto:info@oddjob.ru">info@oddjob.ru</a></li>
+                <li><i class="fa fa-phone"></i> <a href="tel:89993338921">+7 (999) 333-89-21</a></li>
+                <li><i class="fa fa-envelope"></i> <a href="mailto:info@oddjob.ru">manager2.omsk@pr.oddjob.ru</a></li>
                 <li><i class="fa fa-map"></i> <a>Северная 27-я, 48; 318 офис; 3 этаж</a></li>
             </ul>
             <ul class="icons">
                 <li><a href="https://t.me/persresh" class="icon brands fa-telegram"><span class="label">telegram</span></a>
                 </li>
-                <li><a href="#" class="icon brands fa-vk"><span class="label">vk</span></a></li>
+                <li><a href="https://vk.com/personal_reshenie" class="icon brands fa-vk"><span class="label">vk</span></a></li>
 
             </ul>
         </article>
